# valerie-chatbot

./: .dockerignore  .env.example  .env.production.example  .gitignore  .railwayignore  AI_CONTEXT.md  BEDROCK_IMPLEMENTATION.md  BEDROCK_QUICKSTART.md  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  Dockerfile.demo  Dockerfile.dev  Dockerfile.ui  ENVIRONMENT.md  LICENSE  PORTABILITY.md  README.md  codecov.yml  coverage.xml  docker-compose.dev.yml  docker-compose.langfuse.yml  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.yml  install.sh  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  run.py  run_ui.py  test_bedrock_provider.py  validate_bedrock.py
.github/: BRANCH_PROTECTION.md
.github/workflows/: ci.yml  deploy-railway.yml  release.yml
config/: agent-registry.yaml  data-sources.yaml  langgraph-config.yaml  llm-providers.yaml  metrics-config.yaml  model-registry.yaml  production.yaml  state-schemas.yaml
config/alertmanager/: alertmanager.yml
config/nginx/: nginx.conf
config/prometheus/: alert-rules.yml  prometheus.yml
demo/: README.md  app.py  mock_responses.py
demo/data/: sample_suppliers.json
docs/: AUTH_MIDDLEWARE.md  DOMAIN_CUSTOMIZATION_GUIDE.md  MULTI-DOMAIN-PLAN.md  components.md  llm-configuration.md  multi-domain-architecture.md  session-store.md  system-architecture.md  user-guide.md
docs/tickets/: SPRINT-16-DOCKER-PRODUCTION.md  SPRINT-17-DATA-DRIVEN-AGENTS.md  VSC-212-FIX-SPANISH-SUPPORT.md
examples/: auth_middleware_example.py  session_store_usage.py
scripts/: deploy.sh  import_excel_data.py  run.py  setup.sh
src/valerie/: __init__.py  cli.py
tests/: __init__.py  conftest.py
tests/api/: conftest.py  test_chat_endpoints.py  test_health_endpoints.py  test_supplier_endpoints.py
tests/integration/: test_agent_flows.py
tests/unit/: test_agents.py  test_auth_middleware.py  test_base_agent.py  test_cli.py  test_cli_extended.py  test_fallback.py  test_graph.py  test_guardrails.py  (+9 more)
(+88 files in other folders)
